@@ -1,5 +1,5 @@
 # Version Identifier
-version = 2.1.0_SNAPSHOT-2013-06-17
+version = 2.1.0_SNAPSHOT-2013-06-20
 
 # Compile with debug information included
 build.debug = true
